[package]
name = "dimg"
version = "0.1.0"
edition = "2024"

[dependencies]
aligned-vec = "0.6.4"
anyhow = "1.0.100"
blake3 = "1.8.3"
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
human_bytes = "0.4.3"
humantime = "2.3.0"
indicatif = "0.18.3"
libc = "0.2.178"
log = "0.4.29"
lz4 = "1.28.1"
num_cpus = "1.17.0"
parse-size = "1.1.0"
sha2 = "0.10.9"
simplelog = "0.12.2"
tokio-uring = "0.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
